--- a/.env
+++ b/.env
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=10.124.0.4
+DB_PORT=60090
 DB_DATABASE=codigo
-DB_USERNAME=root
-DB_PASSWORD=admin
+DB_USERNAME=admin
+DB_PASSWORD=OIJ123HUBBWSNFNQHHHH
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
